# touyakun

./: .gitignore  README.md  docker-compose.yml
ai/: Dockerfile  main.py  pyproject.toml
ai/app/: main.py
ai/app/controllers/: gemini_recognition_controller.py
ai/app/exception/: errors.py  exception_handler.py
ai/app/routers/: medications.py
ai/app/schemas/: medications.py
ai/app/services/: gemini_recognition_service.py
api/: Dockerfile  go.mod  go.sum  main.go
api/controllers/: dosage.go  notification.go  time.go  user.go  util.go
api/middleware/: auth.go  error.go
api/migrations/: 000001_create_user_table.up.sql  000002_create_dosage_table.down.sql  000002_create_dosage_table.up.sql  000002_create_time_table.down.sql  000002_create_time_table.up.sql  000003_create_dosage_table.down.sql  000003_create_dosage_table.up.sql
api/models/: dosage.go  dosage_test.go  exector.go  notification.go  notification_test.go  time.go  time_test.go  user.go
api/models/testdata/: dosage_test.sql  notification_test.sql  time_test.sql
api/router/: callback_router.go  dosage_router.go  notification_router.go  router.go  time_router.go
api/utils/: line.go
reverseproxy/config/: nginx.conf
