[tool.poetry]
name = "ai"
version = "0.1.0"
description = ""
authors = ["GoRuGoo <dachanyr8989@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
skip = "^0.1.0"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
python-multipart = "^0.0.9"
google-cloud-aiplatform = "^1.48.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
